--- a/webui/index.html
+++ b/webui/index.html
@@ -70,7 +70,17 @@
   </div>
   <div class="row" style="margin-top:10px">
     <div class="col">
-      <button class="ok" onclick="saveConfig()">Save Thresholds</button>
+      <label>Interval (sec)</label>
+      <input id="limitWindowSec" type="number" min="60" max="86400">
+    </div>
+    <div class="col">
+      <label>Max ON in interval (sec)</label>
+      <input id="maxOnSecInWindow" type="number" min="1" max="3600">
+    </div>
+  </div>
+  <div class="row" style="margin-top:10px">
+    <div class="col">
+      <button class="ok" onclick="saveConfig()">Save Config</button>
     </div>
   </div>
 </div>
