--- a/webui/index.html
+++ b/webui/index.html
@@ -70,6 +70,16 @@
   </div>
   <div class="row" style="margin-top:10px">
     <div class="col">
+      <label>Min ON (ms)</label>
+      <input id="minOnMs" type="number" min="0" max="60000">
+    </div>
+    <div class="col">
+      <label>Min OFF (ms)</label>
+      <input id="minOffMs" type="number" min="0" max="60000">
+    </div>
+  </div>
+  <div class="row" style="margin-top:10px">
+    <div class="col">
       <label>Interval (sec)</label>
       <input id="limitWindowSec" type="number" min="60" max="86400">
     </div>
